--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "webpack-dev-server": "2.9.3"
   },
   "dependencies": {
+    "mdbreact": "^4.8.6",
     "react": "16.7.0",
-    "react-dom": "16.7.0"
+    "react-dom": "16.7.0",
+    "react-responsive-carousel": "^3.1.45",
+    "react-simple-card": "^1.0.11",
+    "react-styled-carousel": "^0.4.12",
+    "reactstrap": "^7.0.2"
   }
 }
