--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
     "build": "webpack",
-    "build:prod": "webpack -p --env.NODE_ENV=production"
+    "build:prod": "webpack -p --env.NODE_ENV=production",
+    "build:local": "webpack --env.NODE_ENV=local"
   },
   "repository": {
     "type": "git",
